--- a/overlay-lineage/packages/apps/Settings/res/values/config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/config.xml
@@ -21,4 +21,7 @@
 
     <!-- Whether to show Minimum and Maximum refresh rate in display settings -->
     <bool name="config_show_refresh_rate_controls">true</bool>
+
+    <!-- Whether show refresh rate QS tile -->
+    <bool name="config_showRefreshRateQsTile">true</bool>
 </resources>
